fix horizontal scroll for forms on ipad

--- a/src/client/css/formularios.styl
+++ b/src/client/css/formularios.styl
@@ -27,7 +27,7 @@ body *
     font-family arial
     font-size 24px
     font-weight bold
-    min-width 824px
+    min-width 758px
     max-width 924px
     text-align center
     
